--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -10,3 +10,9 @@
   -webkit-transform:translate3d(0,0,0);
   z-index: 9999999;
 }
+
+.card {
+  background-color: #bbbbbb;
+  height: 200px;
+  width: 200px;
+}
