--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -8,5 +8,14 @@
   animation-fill-mode: forwards;
   transform:translate3d(0,0,0);
   -webkit-transform:translate3d(0,0,0);
-  z-index: 9999999;
+  z-index: 1;
+}
+
+.Exit {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  right: 0;
+  background-color: transparent;
 }
