--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -14,7 +14,7 @@
 .Exit {
   position: absolute;
   z-index: 2;
-  width: 100%;
+  width: calc(100vw - 400px);
   height: 100%;
   right: 0;
   background-color: transparent;
